s4/lib/wmi_wrap: use HAVE___ATTRIBUTE__ instead of __GNUC__

BUG: https://bugzilla.samba.org/show_bug.cgi?id=11750

Signed-off-by: Douglas Bagnall <douglas.bagnall@catalyst.net.nz>
Reviewed-by: Andrew Bartlett <abartlet@samba.org>
Reviewed-by: Uri Simchoni <uri@samba.org>
(cherry picked from commit 82258aa2a6ff1a8d139f60abb170aaffb0934025)